--- a/OOAD_assignment_1/Views/Shared/_LoginPartial.cshtml
+++ b/OOAD_assignment_1/Views/Shared/_LoginPartial.cshtml
@@ -10,6 +10,7 @@
         <ul class="nav navbar-nav navbar-right">
             <li>
                 <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+                <a asp-area="" asp-controller="Parties" asp-action="Index" title="Parties">Hello @UserManager.GetUserName(User)!</a>
             </li>
             <li>
                 <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
