--- a/OOAD_assignment_1/Views/AccountabilityTypes/Delete.cshtml
+++ b/OOAD_assignment_1/Views/AccountabilityTypes/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model OOAD_assignment_1.Models.AccountabilityType
+﻿@model OOAD_assignment_1.Models.AccountabilityTypesViewModels.DeleteViewModel
 
 @{
     ViewData["Title"] = "Delete";
@@ -6,22 +6,48 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>AccountabilityType</h4>
+@if (Model.CanDelete)
+{
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <h4>AccountabilityType</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.AccountabilityType.Description)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.AccountabilityType.Description)
+            </dd>
+        </dl>
+
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="AccountabilityType.AccountabilityTypeId" />
+            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <a asp-action="Index">Back to List</a>
+        </form>
+    </div>
+}
+else
+{
+    <h3>This accountability type is in use</h3>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="AccountabilityTypeId" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
-</div>
+    <p>As @Model.AccountabilityType.Description is in use it may not be deleted. Please review all affected parties.</p>
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Commissioner</th>
+                <th>Accountable</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (Accountability accountability in Model.AffectedAccountabilities)
+                {
+                <tr>
+                    <td>@accountability.Commissioner.Name</td>
+                    <td>@accountability.Accountable.Name</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
