--- a/OOAD_assignment_1/Views/Accountabilities/Edit.cshtml
+++ b/OOAD_assignment_1/Views/Accountabilities/Edit.cshtml
@@ -15,8 +15,18 @@
             <input type="hidden" asp-for="CommissionerId" />
             <input type="hidden" asp-for="AccountableId" />
             <div class="form-group">
-                <label asp-for="AccountabilityTypeId" class="control-label"></label>
-                <select asp-for="AccountabilityTypeId" class="form-control" asp-items="ViewBag.AccountabilityTypeId"></select>
+                <label class="control-label">Commisioner</label>
+                <select asp-for="CommissionerId" class="form-control" asp-items="ViewBag.CommisionerName"></select>
+                <span asp-validation-for="CommissionerId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label class="control-label">Accountable</label>
+                <select asp-for="AccountableId" class="form-control" asp-items="ViewBag.ResponsibleName"></select>
+                <span asp-validation-for="AccountableId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label class="control-label">Accountability Type</label>
+                <select asp-for="AccountabilityTypeId" class="form-control" asp-items="ViewBag.Description"></select>
                 <span asp-validation-for="AccountabilityTypeId" class="text-danger"></span>
             </div>
             <div class="form-group">
