--- a/OOAD_assignment_1/Views/Shared/_Layout.cshtml
+++ b/OOAD_assignment_1/Views/Shared/_Layout.cshtml
@@ -32,8 +32,8 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Parties" asp-action="Index">Parties</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    <li><a asp-area="" asp-controller="Accountabilities" asp-action="Create">Create</a></li>
+                    <li><a asp-area="" asp-controller="AccountabilityTypes" asp-action="Index">AccountabilityTypes</a></li>
+                    <li><a asp-area="" asp-controller="Accountabilities" asp-action="Index">Accountabilities</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
