changed ITimeProvider and added time to layout

--- a/OOAD_assignment_1/Views/Shared/_Layout.cshtml
+++ b/OOAD_assignment_1/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@inject OOAD_assignment_1.Services.ITimeProvider fakeTimeProvider
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -34,6 +36,7 @@
                     <li><a asp-area="" asp-controller="Parties" asp-action="Index">Parties</a></li>
                     <li><a asp-area="" asp-controller="AccountabilityTypes" asp-action="Index">AccountabilityTypes</a></li>
                     <li><a asp-area="" asp-controller="Accountabilities" asp-action="Index">Accountabilities</a></li>
+                    <li><a>@fakeTimeProvider.GetTime()</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
