--- a/OOAD_assignment_1/Views/Shared/_Layout.cshtml
+++ b/OOAD_assignment_1/Views/Shared/_Layout.cshtml
@@ -35,6 +35,8 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Parties" asp-action="Index">Parties</a></li>
                     <li><a asp-area="" asp-controller="AccountabilityTypes" asp-action="Index">AccountabilityTypes</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Timewarp">Timewrap</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Reset">Reset</a></li>
                     <li><a asp-area="" asp-controller="Accountabilities" asp-action="Index">Accountabilities</a></li>
                     <li><a>@fakeTimeProvider.GetTime()</a></li>
                 </ul>
